; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/ulp/ipoib/extr_ipoib_cm.c_set_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/ulp/ipoib/extr_ipoib_cm.c_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.net_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.device_attribute*, i8*, i64)* @set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @set_mode(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.device*, align 8
  %7 = alloca %struct.device_attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.net_device*, align 8
  %11 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %6, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load %struct.device*, %struct.device** %6, align 8
  %13 = call %struct.net_device* @to_net_dev(%struct.device* %12)
  store %struct.net_device* %13, %struct.net_device** %10, align 8
  %14 = call i32 (...) @rtnl_trylock()
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %4
  %17 = call i64 (...) @restart_syscall()
  store i64 %17, i64* %5, align 8
  br label %30

18:                                               ; preds = %4
  %19 = load %struct.net_device*, %struct.net_device** %10, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = call i32 @ipoib_set_mode(%struct.net_device* %19, i8* %20)
  store i32 %21, i32* %11, align 4
  %22 = call i32 (...) @rtnl_unlock()
  %23 = load i32, i32* %11, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %27, label %25

25:                                               ; preds = %18
  %26 = load i64, i64* %9, align 8
  store i64 %26, i64* %5, align 8
  br label %30

27:                                               ; preds = %18
  %28 = load i32, i32* %11, align 4
  %29 = sext i32 %28 to i64
  store i64 %29, i64* %5, align 8
  br label %30

30:                                               ; preds = %27, %25, %16
  %31 = load i64, i64* %5, align 8
  ret i64 %31
}

declare dso_local %struct.net_device* @to_net_dev(%struct.device*) #1

declare dso_local i32 @rtnl_trylock(...) #1

declare dso_local i64 @restart_syscall(...) #1

declare dso_local i32 @ipoib_set_mode(%struct.net_device*, i8*) #1

declare dso_local i32 @rtnl_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
